[gd_scene load_steps=2 format=3 uid="uid://d05iuopxfqlhj"]

[ext_resource type="Script" path="res://scenes/instances/new_file_popup.gd" id="1_qca52"]

[node name="New File Popup" type="Window"]
msaa_2d = 1
title = "Create New File"
initial_position = 1
size = Vector2i(480, 364)
exclusive = true
unresizable = true
always_on_top = true
min_size = Vector2i(480, 0)
script = ExtResource("1_qca52")

[node name="SaveFolderDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
root_subfolder = "res://"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 476.0
offset_bottom = 360.0

[node name="Song Metadata Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Song Metadata"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Artist Name" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Song Artist(s)"

[node name="Song Title" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Song Title"

[node name="Song Difficulty" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Song Difficulty"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Audio Files Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Audio Files"

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Vocals File Location" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
placeholder_text = "Vocals File Location"
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Select File Location"

[node name="Vocals File Dialog" type="FileDialog" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "res://"
filters = PackedStringArray("*.mp3", "*.ogg")

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Inst File Location" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
placeholder_text = "Inst File Location"
editable = false

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 0
text = "Select File Location"

[node name="Inst File Dialog" type="FileDialog" parent="VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(540, 400)
unresizable = true
always_on_top = true
min_size = Vector2i(320, 320)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "res://"
filters = PackedStringArray("*.mp3", "*.ogg")

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Save Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Create New File"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="dir_selected" from="SaveFolderDialog" to="." method="_on_save_folder_dialog_dir_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_vocals_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/HBoxContainer/Vocals File Dialog" to="." method="_on_vocals_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Button" to="." method="_on_inst_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/HBoxContainer3/Inst File Dialog" to="." method="_on_inst_file_dialog_file_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Save Button" to="." method="_on_save_button_pressed"]
